tests/baselines/reference/importDeclWithDeclareModifier.errors.txt
tests/cases/compiler/importDeclWithDeclareModifier.ts(5,9): error TS1029: 'export' modifier must precede 'declare' modifier.
tests/cases/compiler/importDeclWithDeclareModifier.ts(5,27): error TS2708: Cannot use namespace 'x' as a value.
tests/cases/compiler/importDeclWithDeclareModifier.ts(5,29): error TS2694: Namespace 'x' has no exported member 'c'.


==== tests/cases/compiler/importDeclWithDeclareModifier.ts (3 errors) ====
    module x {
        interface c {
        }
    }
    declare export import a = x.c;
            ~~~~~~
!!! error TS1029: 'export' modifier must precede 'declare' modifier.
                              ~
!!! error TS2708: Cannot use namespace 'x' as a value.
                                ~
!!! error TS2694: Namespace 'x' has no exported member 'c'.
    var b: a;
    